fix: align youtube timestamp icon

--- a/src/base.css
+++ b/src/base.css
@@ -1161,6 +1161,12 @@ div.w-full.bg-indigo-200.rounded-full.animate-pulse > div[transition] {
 }
 
 
+/* youtube timestamps */
+
+.youtube-timestamp > svg {
+    position: relative;
+    bottom: 0.1rem;
+}
 /* ------- */
 /* PLUGINS */
 /* ------- */
